--- a/src/blocks/main-nav/main-nav.data.pug
+++ b/src/blocks/main-nav/main-nav.data.pug
@@ -34,18 +34,18 @@
     },
     {
       "id": "30",
-      "name": "Отзывы",
-      "url": "/reviews"
-    },
-    {
-      "id": "30",
       "name": "О компании",
       "url": "/about",
       "childs": [
         {
           "id": "30-0",
           "name": "О компании 1",
-          "url": "about/1"
+          "url": "about/1",
+          "childs": [{
+            "id": "30-0-0",
+            "name": "О компании 1.1",
+            "url": "about/1.1",
+          }]
         },
         {
           "id": "30-10",
@@ -59,22 +59,131 @@
         },
       ]
     },
+      {
+      "id": "40",
+      "name": "Отзывы",
+      "url": "/reviews"
+    },
+      {
+      "id": "50",
+      "name": "Контакты",
+      "url": "/contacts"
+    },
+
   ];
 
   var addMenu = [
     {
       "id": "0",
-      "name": "Доп 1",
-      "url": "/"
+      "name": "Сервис",
+      "url": "/service"
     },
     {
       "id": "10",
-      "name": "Доп 2",
-      "url": "/pages",
+      "name": "Покупателям",
+      "url": "/customers",
     },
     {
       "id": "20",
-      "name": "Доп 3",
-      "url": "https://github.com/nicothin/NTH-start-project"
+      "name": "Сотрудничество",
+      "url": "/work"
+    },
+  ];
+
+
+  var mobileMenu = [
+    {
+      "id": "0",
+      "name": "Каталог",
+      "url": "/catalog",
+      "childs": [
+        {
+          "id": "0-0",
+          "name": "Каталог 1",
+          "url": "catalog/1"
+        },
+        {
+          "id": "0-10",
+          "name": "Каталог 2",
+          "url": "catalog/2",
+        },
+        {
+          "id": "0-20",
+          "name": "Каталог 3",
+          "url": "catalog/3"
+        },
+      ]
+    },
+    {
+      "id": "10",
+      "name": "Технологии",
+      "url": "/tech"
+    },
+    {
+      "id": "20",
+      "name": "Всё о лечении",
+      "url": "/cure"
+    },
+    {
+      "id": "30",
+      "name": "О компании",
+      "url": "/about",
+      "childs": [
+        {
+          "id": "30-0",
+          "name": "О компании 1",
+          "url": "about/1",
+          "childs": [{
+            "id": "30-0-0",
+            "name": "О компании 1.1",
+            "url": "about/1.1",
+          }]
+        },
+        {
+          "id": "30-10",
+          "name": "О компании 2",
+          "url": "about/2",
+        },
+        {
+          "id": "30-20",
+          "name": "О компании 3",
+          "url": "about/3"
+        },
+      ]
+    },
+      {
+      "id": "40",
+      "name": "Отзывы",
+      "url": "/reviews"
+    },
+      {
+      "id": "50",
+      "name": "Контакты",
+      "url": "/contacts"
+    },
+    {
+      "id": "60",
+      "name": "Сервис",
+      "url": "/service"
+    },
+    {
+      "id": "70",
+      "name": "Покупателям",
+      "url": "/customers",
+    },
+    {
+      "id": "80",
+      "name": "Сотрудничество",
+      "url": "/work"
+    },
+    {
+      "id": "90",
+      "name": "тест прокрутки",
+      "url": "/work"
+    },
+    {
+      "id": "100",
+      "name": "тест прокрутки",
+      "url": "/work"
     },
   ];
