--- a/src/blocks/burger/burger.scss
+++ b/src/blocks/burger/burger.scss
@@ -4,57 +4,47 @@
 
 .burger {
   display: inline-block;
+  vertical-align: middle;
   position: relative;
   z-index: 1;
-  width: 30px;
+  width: 45px;
   border: none;
   padding: 0;
-  line-height: 30px;
+  padding-left: 15px;
+  height: 28px;
   background: transparent;
   user-select: none;
   cursor: pointer;
 
-  > span { // stylelint-disable-line  selector-combinator-blacklist
-    display: inline-block;
-    position: relative;
-    width: 100%;
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    left: 15px;
+    width: 30px;
     height: $toggler-part-height;
-    vertical-align: middle;
-    font-size: 0;
-    color: transparent;
     background: $toggler-part-bg-color;
-    transition: background $transition-time $transition-time;
-
-    &:before,
-    &:after {
-      content: '';
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: $toggler-part-height;
-      background: $toggler-part-bg-color;
-      transform-origin: 50% 50%;
-      transition: top $transition-time $transition-time, transform $transition-time;
-    }
-
-    &:before {
-      top: -10px;
-    }
-
-    &:after {
-      top: 10px;
-    }
+    transform-origin: 50% 50%;
+    transition: top $transition-time $transition-time, transform $transition-time;
   }
+
+  &:before {
+    top: 5px;
+  }
+
+  &:after {
+    bottom: 5px;
+  }
+
 
   &--close {
 
-    > span { // stylelint-disable-line  selector-combinator-blacklist
-      transition: background $transition-time 0s;
-      background: transparent;
+        // transition: background $transition-time 0s;
+        // background: transparent;
 
       &:before,
       &:after {
-        top: 0;
+        top: 50%;
         transition: top $transition-time, transform $transition-time $transition-time;
       }
 
@@ -65,6 +55,6 @@
       &:after {
         transform: rotate3d(0, 0, 1, -45deg);
       }
-    }
+
   }
 }
