--- a/src/css/input.css
+++ b/src/css/input.css
@@ -10,7 +10,7 @@
   box-sizing: border-box; /* 1 */
   border-width: 0; /* 2 */
   border-style: solid; /* 2 */
-  border-color: #e5e7eb; /* 2 */
+  border-color: #ebebeb; /* 2 */
 }
 ::before,
 ::after {
@@ -395,6 +395,25 @@ video {
  * Любые изменения этого файла будут потеряны при следующей компиляции.
  * Любое изменение проекта без возможности компиляции ДОЛЬШЕ И ДОРОЖЕ в 2-5 раз.
  */
+.fade {
+  transition: opacity 0.15s linear;
+}
+.fade:not(.show) {
+  opacity: 0;
+}
+.collapse:not(.show) {
+  display: none;
+}
+.collapsing {
+  height: 0;
+  overflow: hidden;
+  transition: height 0.35s ease;
+}
+.collapsing.collapse-horizontal {
+  width: 0;
+  height: auto;
+  transition: width 0.35s ease;
+}
 .dropup,
 .dropend,
 .dropdown,
@@ -614,114 +633,6 @@ video {
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
-.nav {
-  --bs-nav-link-padding-x: 1rem;
-  --bs-nav-link-padding-y: 0.5rem;
-  --bs-nav-link-font-weight: ;
-  --bs-nav-link-color: var(--bs-link-color);
-  --bs-nav-link-hover-color: var(--bs-link-hover-color);
-  --bs-nav-link-disabled-color: #6c757d;
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-.nav-link {
-  display: block;
-  padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
-  font-size: var(--bs-nav-link-font-size);
-  font-weight: var(--bs-nav-link-font-weight);
-  color: var(--bs-nav-link-color);
-  text-decoration: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-}
-.nav-link:hover, .nav-link:focus {
-  color: var(--bs-nav-link-hover-color);
-}
-.nav-link.disabled {
-  color: var(--bs-nav-link-disabled-color);
-  pointer-events: none;
-  cursor: default;
-}
-.nav-tabs {
-  --bs-nav-tabs-border-width: 1px;
-  --bs-nav-tabs-border-color: #dee2e6;
-  --bs-nav-tabs-border-radius: 0.375rem;
-  --bs-nav-tabs-link-hover-border-color: #e9ecef #e9ecef #dee2e6;
-  --bs-nav-tabs-link-active-color: #495057;
-  --bs-nav-tabs-link-active-bg: #fff;
-  --bs-nav-tabs-link-active-border-color: #dee2e6 #dee2e6 #fff;
-  border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
-}
-.nav-tabs .nav-link {
-  margin-bottom: calc(var(--bs-nav-tabs-border-width) * -1);
-  background: none;
-  border: var(--bs-nav-tabs-border-width) solid transparent;
-  border-top-left-radius: var(--bs-nav-tabs-border-radius);
-  border-top-right-radius: var(--bs-nav-tabs-border-radius);
-}
-.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-  isolation: isolate;
-  border-color: var(--bs-nav-tabs-link-hover-border-color);
-}
-.nav-tabs .nav-link.disabled, .nav-tabs .nav-link:disabled {
-  color: var(--bs-nav-link-disabled-color);
-  background-color: transparent;
-  border-color: transparent;
-}
-.nav-tabs .nav-link.active,
-.nav-tabs .nav-item.show .nav-link {
-  color: var(--bs-nav-tabs-link-active-color);
-  background-color: var(--bs-nav-tabs-link-active-bg);
-  border-color: var(--bs-nav-tabs-link-active-border-color);
-}
-.nav-tabs .dropdown-menu {
-  margin-top: calc(var(--bs-nav-tabs-border-width) * -1);
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-.nav-pills {
-  --bs-nav-pills-border-radius: 0.375rem;
-  --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #0d6efd;
-}
-.nav-pills .nav-link {
-  background: none;
-  border: 0;
-  border-radius: var(--bs-nav-pills-border-radius);
-}
-.nav-pills .nav-link:disabled {
-  color: var(--bs-nav-link-disabled-color);
-  background-color: transparent;
-  border-color: transparent;
-}
-.nav-pills .nav-link.active,
-.nav-pills .show > .nav-link {
-  color: var(--bs-nav-pills-link-active-color);
-  background-color: var(--bs-nav-pills-link-active-bg);
-}
-.nav-fill > .nav-link,
-.nav-fill .nav-item {
-  flex: 1 1 auto;
-  text-align: center;
-}
-.nav-justified > .nav-link,
-.nav-justified .nav-item {
-  flex-basis: 0;
-  flex-grow: 1;
-  text-align: center;
-}
-.nav-fill .nav-item .nav-link,
-.nav-justified .nav-item .nav-link {
-  width: 100%;
-}
-.tab-content > .tab-pane {
-  display: none;
-}
-.tab-content > .active {
-  display: block;
-}
 /* stylelint-disable */
 /* stylelint-enable */
 .page {
@@ -738,6 +649,14 @@ video {
 }
 .page__content {
   flex-grow: 1;
+}
+.page__content::before {
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  content: url("../screens/main-mobile.jpg");
+  opacity: 0.4;
 }
 .page__footer-wrapper {
   flex-shrink: 0;
@@ -760,7 +679,8 @@ body {
   line-height: 1.5;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-align: left;
-  color: #1a1a1a;
+  --tw-text-opacity: 1;
+  color: rgb(104 104 104 / var(--tw-text-opacity));
   background-color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -954,59 +874,102 @@ pre {
 pre code {
   background: transparent;
 }
+.action-btn {
+  font-size: 20px;
+  padding: 0 10px;
+}
+.btn {
+  box-sizing: border-box;
+  display: inline-block;
+  max-width: 100%;
+  margin: 0;
+  border-radius: 3px;
+  border: 0;
+  padding: 5px 12px;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  text-align: center;
+  font-size: 1em;
+  font-family: inherit;
+  line-height: 1.5;
+  text-decoration: none;
+  text-transform: none;
+  color: #1a1a1a;
+  background-color: #e6e6e6;
+  background-image: none;
+  cursor: pointer;
+  overflow: hidden;
+}
+.btn:hover, .btn:focus {
+  text-decoration: none;
+  color: #1a1a1a;
+  background-color: #cccccc;
+}
+.btn:active, .btn:focus {
+  outline: 0;
+  box-shadow: 0 0 0 2px rgba(2, 117, 217, 0.7);
+}
+.btn--disabled, .btn:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+  color: #1a1a1a;
+  background-color: #e6e6e6;
+}
+a.btn--disabled {
+  pointer-events: none;
+}
+.btn--lang {
+  padding: 0.6em 0.9em;
+  border: 1px solid #ebebeb;
+  border-radius: 1.75em;
+}
+.btn--lang.active {
+  border-color: #14142B;
+}
 .burger {
   display: inline-block;
+  vertical-align: middle;
   position: relative;
   z-index: 1;
-  width: 30px;
+  width: 45px;
   border: none;
   padding: 0;
-  line-height: 30px;
+  padding-left: 15px;
+  height: 28px;
   background: transparent;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
   cursor: pointer;
 }
-.burger > span {
-  display: inline-block;
-  position: relative;
-  width: 100%;
-  height: 3px;
-  vertical-align: middle;
-  font-size: 0;
-  color: transparent;
-  background: #000;
-  transition: background 0.3s 0.3s;
-}
-.burger > span:before, .burger > span:after {
+.burger:before, .burger:after {
   content: "";
   position: absolute;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background: #000;
+  left: 15px;
+  width: 30px;
+  height: 2px;
+  background: #14142B;
   transform-origin: 50% 50%;
   transition: top 0.3s 0.3s, transform 0.3s;
 }
-.burger > span:before {
-  top: -10px;
+.burger:before {
+  top: 5px;
 }
-.burger > span:after {
-  top: 10px;
+.burger:after {
+  bottom: 5px;
 }
-.burger--close > span {
-  transition: background 0.3s 0s;
-  background: transparent;
-}
-.burger--close > span:before, .burger--close > span:after {
-  top: 0;
+.burger--close:before, .burger--close:after {
+  top: 50%;
   transition: top 0.3s, transform 0.3s 0.3s;
 }
-.burger--close > span:before {
+.burger--close:before {
   transform: rotate3d(0, 0, 1, 45deg);
 }
-.burger--close > span:after {
+.burger--close:after {
   transform: rotate3d(0, 0, 1, -45deg);
 }
 .dropdown-menu li {
@@ -1025,6 +988,26 @@ pre code {
 .dropdown-menu > li:hover > .dropdown-submenu {
   display: block;
 }
+.dropdown-toggle::after {
+  content: "";
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  margin-left: 5px;
+  border-left: 1px solid #000;
+  border-top: 1px solid #000;
+  border-right: none;
+  right: 15px;
+  top: 50%;
+  transform: rotate(-135deg) translateY(70%);
+}
+.hours span {
+  margin-right: 5px;
+  color: #686868;
+}
+.hours span:last-child {
+  margin-right: 0;
+}
 .logo {
   display: inline-block;
   white-space: nowrap;
@@ -1032,17 +1015,133 @@ pre code {
 .logo img {
   display: block;
 }
-.menu-actions__inner {
-  display: flex;
-  align-items: center;
+.main-nav {
+  position: relative;
+  z-index: 10;
 }
-.nav__list {
-  display: flex;
-  padding: 0;
+.page-header__inner .main-nav--main {
+  margin-right: auto;
+}
+.js .nav--mobile .main-nav__inner {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s;
+}
+.js .nav--mobile .main-nav__inner .main-nav__list--lvl-2 {
+  max-height: 0;
+}
+.js .nav--mobile.main-nav--open .main-nav__inner {
+  max-height: 1000px;
+  transition: max-height 0.6s;
+}
+.js .nav--mobile.main-nav--open .main-nav__inner .main-nav__list--lvl-2 {
+  max-height: none;
+}
+.main-nav__list {
   margin: 0;
+  padding: 0;
   list-style: none;
 }
-.nav-link{
+.nav--add .main-nav__list {
+  padding-top: 15px;
+}
+.nav--mobile .main-nav__list {
+  max-height: 400px;
+  overflow-y: scroll;
+}
+.js .nav--add .main-nav__list {
+  position: absolute;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s;
+}
+.js .nav--add .main-nav__list--lvl-2 {
+  max-height: 0;
+}
+.js .nav--add.main-nav--open .main-nav__list {
+  max-height: 1000px;
+  transition: max-height 0.6s;
+}
+.js .nav--add.main-nav--open .main-nav__list--lvl-2 {
+  max-height: none;
+}
+.main-nav__item {
+  position: relative;
+}
+.main-nav__item--active > .main-nav__link {
+  color: #000;
+}
+.main-nav__item--has-child::after {
+  content: "";
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  margin-left: 5px;
+  border-left: 1px solid #000;
+  border-top: 1px solid #000;
+  border-right: none;
+  right: 15px;
+  top: 50%;
+  transform: rotate(-135deg) translateY(70%);
+}
+.nav--mobile .main-nav__item--has-child::after {
+  top: 0.6em;
+  transform: rotate(-135deg);
+}
+.main-nav__item--has-child .main-nav__link {
+  padding-right: 1.3em;
+}
+.main-nav__item--has-child.main-nav__item--lvl-2::after {
+  transform: rotate(135deg) translateY(70%);
+}
+.main-nav__link {
+  display: block;
+  padding: 0.5em 0.9em;
+  text-decoration: none;
+  background-color: #fff;
+  color: inherit;
+}
+.main-nav__link:hover, .main-nav__link:focus {
+  color: inherit;
+  font-weight: 700;
+  text-decoration: none;
+  background-color: #e6e6e6;
+}
+.nav--add .main-nav__link {
+  white-space: nowrap;
+}
+.nav--mobile .main-nav__link {
+  padding: 0.65em 0.9em;
+}
+.main-nav__link--lvl-2 {
+  white-space: nowrap;
+}
+.nav--mobile .main-nav__link--lvl-2 {
+  padding-left: 2em;
+}
+.main-nav__link--lvl-3 {
+  white-space: nowrap;
+}
+.nav--mobile .main-nav__link--lvl-3 {
+  padding-left: 3em;
+}
+.main-nav__sublist-wrapper--lvl-2 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.main-nav__sublist-wrapper--lvl-3 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.main-nav__toggler {
+  display: inline-block;
+  border: none;
+  background: none;
+}
+.no-js .main-nav__toggler {
+  display: none;
+}
+.nav{
   padding-top: 0px;
   padding-bottom: 0px;
   font-size: 1.125rem;
@@ -1050,9 +1149,34 @@ pre code {
   --tw-text-opacity: 1;
   color: rgb(20 20 43 / var(--tw-text-opacity));
 }
+.nav--main {
+  margin-right: auto;
+}
+.nav--mobile {
+  width: 100%;
+  position: fixed;
+  top: 60px;
+  left: 0;
+  background-color: #fff;
+}
+.nav--mobile .main-nav__list {
+  padding-top: 10px;
+}
+.nav__info {
+  padding: 0 0.9em;
+  margin-top: 55px;
+}
 .page-header__inner {
   display: flex;
   align-items: center;
+  padding-top: 10px;
+  margin-bottom: 15px;
+  /*!!!delete*/
+  letter-spacing: -0.5px;
+  font-weight: 300;
+}
+.page-header .logo {
+  margin-right: auto;
 }
 .phone a {
   color: currentColor;
@@ -1063,6 +1187,114 @@ pre code {
 }
 .phone:hover, .phone:focus {
   color: currentColor;
+}
+.search-form {
+  box-sizing: border-box;
+  position: relative;
+}
+.search-form.active {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 9px 10px;
+  background-color: #fff;
+  z-index: 100;
+}
+.search-form__input-wrapper {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.search-form.active .search-form__input-wrapper {
+  width: 100%;
+}
+.search-form__input {
+  height: 40px;
+  width: 50px;
+  border-style: none;
+  padding: 6px 18px;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  outline: none;
+  border-radius: 25px;
+  transition: all 0.5s ease-in-out;
+  padding-right: 40px;
+  color: #14142B;
+  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+}
+.search-form.active .search-form__input {
+  height: 42px;
+  width: 100%;
+  background-color: #f5f5f5;
+}
+.search-form__btn {
+  width: 50px;
+  height: 40px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  background-color: transparent;
+  pointer-events: painted;
+}
+.search-form.active .search-form__btn {
+  right: 20px;
+}
+.switcher {
+  position: relative;
+  min-width: 35px;
+}
+.switcher__wrapper {
+  margin-right: 30px;
+}
+.switcher__select {
+  padding-left: 10px;
+  padding-right: 15px;
+  border-left: 1px solid #ebebeb;
+  border-right: 1px solid #ebebeb;
+  border-bottom: 1px solid #ebebeb;
+  border-radius: 0;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+.switcher__select.show {
+  left: 0 !important;
+  right: 0 !important;
+  top: 100% !important;
+  min-width: auto !important;
+  padding-top: 0;
+  text-align: center;
+  transform: none !important;
+}
+.switcher__value {
+  min-width: 50px;
+  border: 1px solid #ebebeb;
+  border-radius: 1rem;
+}
+.switcher.show .switcher__value {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-color: transparent;
+}
+.switcher__item {
+  cursor: pointer;
+}
+.switcher__item--active {
+  display: none;
+}
+body * {
+  background-color: transparent !important;
+}
+.main-nav__sublist-wrapper--lvl-2 {
+  display: none;
 }
 /*!*
  * ВНИМАНИЕ! Этот файл генерируется автоматически.
@@ -1120,6 +1352,62 @@ pre code {
     left: auto;
   }
 }
+@media (min-width: 1024px) {
+  .nav--main .main-nav__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .nav--main .main-nav__list--lvl-2 {
+    display: block;
+  }
+  .nav--main .main-nav__list--lvl-3 {
+    display: block;
+  }
+  .main-nav__sublist-wrapper--lvl-2 {
+    padding-top: 15px;
+    padding-bottom: 0;
+  }
+  .nav--main .main-nav__sublist-wrapper--lvl-2 {
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 0;
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: opacity 0.3s;
+  }
+  .nav--main .main-nav__item--show-child > .main-nav__sublist-wrapper--lvl-2, .nav--main .main-nav__item:hover .main-nav__sublist-wrapper--lvl-2 {
+    height: auto;
+    overflow: visible;
+    opacity: 1;
+  }
+  .main-nav__sublist-wrapper--lvl-3 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .nav--main .main-nav__sublist-wrapper--lvl-3, .nav--mobile .main-nav__sublist-wrapper--lvl-3 {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 100%;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: opacity 0.3s;
+  }
+  .nav--main .main-nav__item--show-child > .main-nav__sublist-wrapper--lvl-3, .nav--main .main-nav__item--lvl-2:hover .main-nav__sublist-wrapper--lvl-3 {
+    height: auto;
+    overflow: visible;
+    opacity: 1;
+  }
+  .nav--main .main-nav__toggler {
+    display: none;
+  }
+  .nav--add {
+    margin-right: 15px;
+  }
+}
 @media (min-width: 1200px) {
   .dropdown-menu-xl-start {
     --bs-position: start;
@@ -1136,11 +1424,19 @@ pre code {
     right: 0;
     left: auto;
   }
+}
+@media (min-width: 1280px) {
   a[href^="tel:"] {
     white-space: nowrap;
     pointer-events: none;
     text-decoration: inherit;
     color: inherit;
+  }
+  .page-header__inner {
+    padding-top: 20px;
+  }
+  .page-header .logo {
+    margin-right: 55px;
   }
 }
 @media (min-width: 1400px) {
@@ -1161,8 +1457,47 @@ pre code {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .nav-link {
+  .fade {
     transition: none;
+  }
+  .collapsing {
+    transition: none;
+  }
+  .collapsing.collapse-horizontal {
+    transition: none;
+  }
+}
+@media (max-width: 1023px) {
+  .js .nav--main .main-nav__list {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s;
+  }
+  .js .nav--main .main-nav__list--lvl-2 {
+    max-height: 0;
+  }
+  .js .nav--main.main-nav--open .main-nav__list {
+    max-height: 1000px;
+    transition: max-height 0.6s;
+  }
+  .js .nav--main.main-nav--open .main-nav__list--lvl-2 {
+    max-height: none;
+  }
+  .nav--main .main-nav__link--lvl-2 {
+    padding-left: 2em;
+  }
+  .nav--main .main-nav__link--lvl-3 {
+    padding-left: 3em;
+  }
+}
+@media (max-width: 1279px) {
+  .main--nav {
+    width: 100%;
+  }
+}
+@media (max-width: 1280px) {
+  .page-header__inner {
+    flex-wrap: wrap;
   }
 }
 /*! tailwindcss/components*/
@@ -1204,11 +1539,20 @@ pre code {
 .relative {
   position: relative;
 }
-.mr-8 {
-  margin-right: 2rem;
+.order-3 {
+  order: 3;
 }
-.ml-auto {
-  margin-left: auto;
+.order-last {
+  order: 9999;
+}
+.mr-auto {
+  margin-right: auto;
+}
+.mr-\[8px\] {
+  margin-right: 8px;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .flex {
   display: flex;
@@ -1233,35 +1577,61 @@ pre code {
   margin-right: calc(0.25rem * var(--tw-space-x-reverse));
   margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.pl-\[10px\] {
+  padding-left: 10px;
+}
+.pr-\[15px\] {
+  padding-right: 15px;
 }
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .font-medium {
   font-weight: 500;
+}
+.leading-8 {
+  line-height: 2rem;
 }
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(20 20 43 / var(--tw-text-opacity));
 }
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(104 104 104 / var(--tw-text-opacity));
+}
+.after_right-2\.5::after {
+  content: var(--tw-content);
+  right: 0.625rem;
+}
+.after_right-2::after {
+  content: var(--tw-content);
+  right: 0.5rem;
+}
 @media (min-width: 1024px) {
-  .lg_text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+  .lg_block {
+    display: block;
+  }
+  .lg_hidden {
+    display: none;
   }
 }
 @media (min-width: 1280px) {
-  .xl_text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .xl_block {
+    display: block;
   }
 }
 @media (min-width: 1440px) {
-  .\32xl_block {
+  .xxl_block {
     display: block;
   }
 }
