--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -41,7 +41,7 @@ html(class='page  no-js', lang='ru')
 
         +page-header()(class="text-black")
           +logo('/')
-            img(src='img/logo.svg', alt='Logo', width='120', height='16')
+            img(src='img/logo.png', alt='Logo', width='120', height='16')
           block nav
 
         block content
