--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -62,17 +62,17 @@ $font-family--monospace:     SFMono-Regular, Menlo, Monaco, Consolas, Liberation
 // Ширины
 
 $screen-xs:                   0;
-$screen-sm:                   480px;
-$screen-md:                   768px;
-$screen-lg:                   992px;
-$screen-xl:                   1200px;
-$screen-xxl:                  1800px;
+// $screen-sm:                   360px;
+// $screen-md:                   768px;
+// $screen-lg:                   1024px;
+// $screen-xl:                   1280px;
+// $screen-xxl:                  1440px;
 
-$container-sm:                100%;
-$container-md:                100%;
-$container-lg:                $screen-lg - 30;
-$container-xl:                $screen-xl - 30;
-$container-xxl:               $screen-xxl - 30;
+// $container-sm:                100%;
+// $container-md:                100%;
+// $container-lg:                $screen-lg - 20;
+// $container-xl:                $screen-xl - 20;
+// $container-xxl:               $screen-xxl - 64;
 
 
 
@@ -94,7 +94,7 @@ $transition-time:             0.3s;
 $shadow:                      0 4px 2px -2px rgba(0, 0, 0, 0.3);
 
 $menu-desktop-width:          $screen-lg;
-$toggler-part-height:         3px;
-$toggler-part-bg-color:       #000;
+$toggler-part-height:         2px;
+$toggler-part-bg-color:       $tw-black;
 
 $z-index-modal:               100;
