reviews js and mark-up

--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -469,7 +469,8 @@ pre {
   }
 
   &--catalog,
-  &--info {
+  &--info,
+  &--reviews {
     .tns-controls  {
       position: absolute;
       right: 0;
