--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -222,6 +222,7 @@ block content
       .section__container.container
         .section__inner
           h2.section__title Отзывы
+            +reviews()
 
 
 
