--- a/src/scss/_tailwind-colours.scss
+++ b/src/scss/_tailwind-colours.scss
@@ -31,4 +31,4 @@ $tw-gray-500: #686868;
 $tw-gray-600: #4b5563; 
 $tw-gray-700: #374151; 
 $tw-gray-800: #1f2937; 
-$tw-gray-900: #111827; 
+$tw-gray-900: #14142B; 
