--- a/src/blocks/features/features.scss
+++ b/src/blocks/features/features.scss
@@ -23,11 +23,9 @@
     grid-template-columns: auto 1fr;
     width: 100%;
     padding: 20px;
-    border-radius: 4px;
-    box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.1);
 
     @media (min-width: $screen-md) {
-      box-shadow: none;
+      box-shadow: none !important;
     }
     @media (min-width: $screen-xl) {
       padding: 0;
@@ -36,7 +34,6 @@
 
   &__item {
     display: flex !important;
-    padding: 30px 20px;
     max-width: 580px;
 
     // @media (min-width: $screen-md) {
