--- a/src/blocks/field-select/field-select.scss
+++ b/src/blocks/field-select/field-select.scss
@@ -4,16 +4,40 @@
 
 .field-select {
 
-  $block-name:                &; // #{$block-name}__element
+  $block-name: &; // #{$block-name}__element
 
   display: block;
-  margin-bottom: $typo-margin-vertical;
 
   &__name {
     @include field-name;
   }
 
-  &__select-wrap {}
+
+  &__wrapper {
+    position: relative;
+
+    &::after {
+      content: '\f107';
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      font-family: 'Font Awesome 6 Free';
+      font-weight: 900;
+      font-size: 10px;
+      color: $tw-black;
+      transform: translateY(-50%);
+    }
+
+    select {
+      padding: 6px 15px;
+      font-size: 18px;
+      line-height: 28px;
+      color: $tw-black;
+      appearance: none;
+      background-color: $tw-gray-100;
+    }
+  }
+
 
   // Оформление штатного селекта
   // &__select {
@@ -51,133 +75,133 @@
   //   }
   // }
 
-  &__help-text {
-    @include field-help-text;
-  }
+  // &__help-text {
+  //   @include field-help-text;
+  // }
 
 
 
-  &--error {
-    color: $color-danger;
+  // &--error {
+  //   color: $color-danger;
 
-    #{$block-name}__name,
-    #{$block-name}__select,
-    #{$block-name}__help-text {
-      color: $color-danger;
-    }
+  //   #{$block-name}__name,
+  //   #{$block-name}__select,
+  //   #{$block-name}__help-text {
+  //     color: $color-danger;
+  //   }
 
-    #{$block-name}__select,
-    .choices__inner,
-    .choices:after {
-      border-color: $color-danger;
-      background-color: lighten($color-danger, 35%);
-    }
-  }
+  //   #{$block-name}__select,
+  //   .choices__inner,
+  //   .choices:after {
+  //     border-color: $color-danger;
+  //     background-color: lighten($color-danger, 35%);
+  //   }
+  // }
 }
 
 
 
 /** @define choices */
-.choices {
+// .choices {
 
-  $block-name:                &; // #{$block-name}__element
+//   $block-name:                &; // #{$block-name}__element
 
-  position: relative;
+//   position: relative;
 
-  &:focus {
-    outline: 0;
+//   &:focus {
+//     outline: 0;
 
-    &:not(.is-disabled) {
+//     &:not(.is-disabled) {
 
-      #{$block-name}__inner {
-        @include field-focus;
-      }
-    }
-  }
+//       #{$block-name}__inner {
+//         @include field-focus;
+//       }
+//     }
+//   }
 
-  &:after {
-    content: '';
-    position: absolute;
-    top: 7px;
-    right: 16px;
-    width: 14px;
-    height: 14px;
-    border-left: 1px solid $border-color;
-    border-bottom: 1px solid $border-color;
-    pointer-events: none;
-    transform: rotate(-45deg);
-    transition: all 0.3s;
-  }
+//   &:after {
+//     content: '';
+//     position: absolute;
+//     top: 7px;
+//     right: 16px;
+//     width: 14px;
+//     height: 14px;
+//     border-left: 1px solid $border-color;
+//     border-bottom: 1px solid $border-color;
+//     pointer-events: none;
+//     transform: rotate(-45deg);
+//     transition: all 0.3s;
+//   }
 
-  &.is-open:after {
-    transform: translateY(7px) rotate(135deg);
-  }
+//   &.is-open:after {
+//     transform: translateY(7px) rotate(135deg);
+//   }
 
-  .is-hidden {
-    display: none;
-  }
+//   .is-hidden {
+//     display: none;
+//   }
 
-  &__inner {
-    border: 1px solid $border-color;
-    border-radius: $border-radius;
-    padding: $field-padding-vertical 40px $field-padding-vertical $field-padding-horizontal;
-    background: #fff;
-    font-size: 1em;
-    line-height: 1.5;
-    cursor: pointer;
+//   &__inner {
+//     border: 1px solid $border-color;
+//     border-radius: $border-radius;
+//     padding: $field-padding-vertical 40px $field-padding-vertical $field-padding-horizontal;
+//     background: #fff;
+//     font-size: 1em;
+//     line-height: 1.5;
+//     cursor: pointer;
 
-    #{$block-name}__item--selectable {
-      max-width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-  }
+//     #{$block-name}__item--selectable {
+//       max-width: 100%;
+//       white-space: nowrap;
+//       overflow: hidden;
+//       text-overflow: ellipsis;
+//     }
+//   }
 
-  &__list--dropdown {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    top: 100%;
-    width: 100%;
-    margin-top: -1px;
-    border: 1px solid $border-color;
-    border-bottom-left-radius: $border-radius;
-    border-bottom-right-radius: $border-radius;
-    background-color: #fff;
-    word-break: break-all;
-    overflow: hidden;
+//   &__list--dropdown {
+//     display: none;
+//     position: absolute;
+//     z-index: 1;
+//     top: 100%;
+//     width: 100%;
+//     margin-top: -1px;
+//     border: 1px solid $border-color;
+//     border-bottom-left-radius: $border-radius;
+//     border-bottom-right-radius: $border-radius;
+//     background-color: #fff;
+//     word-break: break-all;
+//     overflow: hidden;
 
-    #{$block-name}__item {
-      padding: $field-padding-vertical $field-padding-horizontal;
-      cursor: pointer;
+//     #{$block-name}__item {
+//       padding: $field-padding-vertical $field-padding-horizontal;
+//       cursor: pointer;
 
-      &.is-highlighted {
-        background: $gray-lightest;
-      }
-    }
-  }
+//       &.is-highlighted {
+//         background: $gray-lightest;
+//       }
+//     }
+//   }
 
-  &__heading {
-    padding: $field-padding-vertical $field-padding-horizontal;
-    font-size: $font-size-sm;
-    font-weight: 700;
-    opacity: 0.5;
-    cursor: default;
-  }
+//   &__heading {
+//     padding: $field-padding-vertical $field-padding-horizontal;
+//     font-size: $font-size-sm;
+//     font-weight: 700;
+//     opacity: 0.5;
+//     cursor: default;
+//   }
 
-  &.is-open {
+//   &.is-open {
 
-    #{$block-name}__list--dropdown {
-      display: block;
-    }
-  }
+//     #{$block-name}__list--dropdown {
+//       display: block;
+//     }
+//   }
 
-  &.is-disabled {
+//   &.is-disabled {
 
-    #{$block-name}__inner {
-      background-color: $gray-lighter;
-      cursor: default;
-    }
-  }
-}
+//     #{$block-name}__inner {
+//       background-color: $gray-lighter;
+//       cursor: default;
+//     }
+//   }
+// }
