--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -8,7 +8,8 @@
 // Сделаем viewport великим снова! (привет, IE10) http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
 @at-root {
 
-  @-ms-viewport { // stylelint-disable-line
+  @-ms-viewport {
+    // stylelint-disable-line
     width: device-width;
   }
 }
@@ -18,19 +19,21 @@
 @font-face {
   font-family: 'Circe';
   src: url('../fonts/Circe_Regular.woff2') format('woff2'),
-       url('../fonts/Circe_Regular.woff') format('woff');
+    url('../fonts/Circe_Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Circe';
   src: url('../fonts/Circe_Bold.woff2') format('woff2'),
-       url('../fonts/Circe_Bold.woff') format('woff');
+    url('../fonts/Circe_Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
+
 /* stylelint-enable */
 
 
@@ -50,26 +53,28 @@
   &__content {
     flex-grow: 1;
 
-    // &::before {
-    //   z-index: -1;
-    //   position: absolute;
-    //   left: 0;
-    //   top: -2600px; //catalog mobile
-    //   top: -1180px; //new mobile
-    //   top: -1504px; //new mobile whitout image
-    //   top: -1324px; //product 1440
-    //   top: -1668px; //service mobile
-    //   top: -2545px; //service 1440
-    //   // top: -3185px; //catalog main
-    //   // top: -140px; //main test features
-    //   // top: 32px; //mobile test features
-    //   // top: -10px; //mobile-menu
-    //   // top: -815px; //vacancies
-    //   // top: -275px;
-    //   //top: -5280px;
-    //   content: url('../screens/main.jpg');
-    //   opacity: 0.4;
-    // }
+    &::before {
+      // z-index: -1;
+      // position: absolute;
+      // left: 0;
+      // top: -2600px; //catalog mobile
+      // top: -1180px; //new mobile
+      // top: -1504px; //new mobile whitout image
+      // top: -1324px; //product 1440
+      // top: -1668px; //service mobile
+      // top: -2545px; //service 1440
+      // top: -1140px; //reviews mobile
+      // top: -2075px; //reviews 1440
+      // // top: -3185px; //catalog main
+      // // top: -140px; //main test features
+      // // top: 32px; //mobile test features
+      // // top: -10px; //mobile-menu
+      // // top: -815px; //vacancies
+      // // top: -275px;
+      // //top: -5280px;
+      // content: url('../screens/main.jpg');
+      // opacity: 0.4;
+    }
   }
 
   &__footer-wrapper {
@@ -98,8 +103,8 @@
 }
 
 body {
-  display: flex;           // Исправляем баг в IE для min-height and flexbox (flex-direction:column)
-  flex-direction: column;  // и прижимаем footer в IE 10-11
+  display: flex; // Исправляем баг в IE для min-height and flexbox (flex-direction:column)
+  flex-direction: column; // и прижимаем footer в IE 10-11
   margin: 0;
   min-height: 100%;
   word-break: break-word;
@@ -142,12 +147,12 @@ label,
 select,
 textarea {
   touch-action: manipulation; // Стилевая коррекция 300ms задержки (для поддерживающих браузеров)
-  margin: 0;                  // Убираем margin в Firefox и Safari
+  margin: 0; // Убираем margin в Firefox и Safari
 }
 
 button,
 input {
-  overflow: visible;    // Покажем торчащее в Edge
+  overflow: visible; // Покажем торчащее в Edge
   text-transform: none; // Уберём наследование text transform в Firefox
 }
 
@@ -176,7 +181,7 @@ input[type='month'] {
 }
 
 textarea {
-  overflow: auto;   // Удаление верт. скролла в IE.
+  overflow: auto; // Удаление верт. скролла в IE.
   resize: vertical; // Правильное изменение размеров
 }
 
@@ -226,17 +231,15 @@ a {
 
 hr {
   box-sizing: content-box; // Проблема Firefox
-  height: 0;               // Проблема Firefox
-  overflow: visible;       // Проблема Edge и IE
+  height: 0; // Проблема Firefox
+  overflow: visible; // Проблема Edge и IE
   margin-top: $typo-margin-vertical * 2;
   margin-bottom: $typo-margin-vertical * 2;
   border: 0;
   border-top: 1px solid $border-color;
 }
 
-h1 {
-
-}
+h1 {}
 
 h1,
 h2,
@@ -258,20 +261,38 @@ h2 {
   margin-top: 1.2em;
   font-size: 24px;
   line-height: 34px;
+
   @media (min-width: $screen-lg) {
     font-size: 32px;
     line-height: 38px;
   }
+
   @media (min-width: $screen-xxl) {
     font-size: 48px;
     line-height: 58px;
   }
 }
 
-h3 { font-size: $font-size-h3; } // stylelint-disable-line
-h4 { font-size: $font-size-h4; } // stylelint-disable-line
-h5 { font-size: $font-size-h5; } // stylelint-disable-line
-h6 { font-size: $font-size-h6; } // stylelint-disable-line
+h3 {
+  font-size: $font-size-h3;
+}
+
+// stylelint-disable-line
+h4 {
+  font-size: $font-size-h4;
+}
+
+// stylelint-disable-line
+h5 {
+  font-size: $font-size-h5;
+}
+
+// stylelint-disable-line
+h6 {
+  font-size: $font-size-h6;
+}
+
+// stylelint-disable-line
 
 p,
 ul,
@@ -396,9 +417,7 @@ pre {
 
 
 
-.section-main {
-
-}
+.section-main {}
 
 
 .section {
@@ -436,25 +455,34 @@ pre {
       margin-top: 20px;
       margin-bottom: 20px;
     }
+
+    .section--reviews & {
+      margin-bottom: 5px;
+    }
   }
 
   &__container,
-  &__container.container {
+  &__container[class$=container] {
     @media (min-width: $screen-xl) {
       padding-left: 140px;
       max-width: $screen-xxl;
       margin-left: auto;
       margin-right: auto;
     }
+
     @media (min-width: $screen-xxl) {
       padding-right: 164px;
+      padding-left: 175px;
+
       .section--catalog & {
-        padding-right: 180px;
-        padding-left: 175px;
+        // padding-right: 180px;
+        // padding-left: 175px;
       }
+
       .section--info & {
         padding-left: 0;
       }
+
       .section--service & {
         padding-left: 0;
       }
@@ -465,23 +493,23 @@ pre {
     position: relative;
   }
 
-  &--features {
-  }
+  &--features {}
 
   &--catalog,
   &--info,
   &--reviews {
-    .tns-controls  {
+    .tns-controls {
       position: absolute;
       right: 0;
       top: 10px;
 
       @media (min-width: $screen-xxl) {
-        top: 30px;
+        top: -170px;
       }
 
       & button {
         background-color: $tw-gray-100;
+
         &::before {
           @include sprite($arrow-right-black-long);
         }
@@ -502,6 +530,34 @@ pre {
     }
   }
 
+  &--reviews .tns-controls {
+    right: 20px;
+  }
+
+  &--reviews {
+    position: relative;
+
+    .section__header {
+      @media (min-width: $screen-xxl) {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .btn--simple {
+        @media (min-width: $screen-xxl) {
+          margin-right: 10px;
+        }
+      }
+    }
+
+    .section__title {
+      @media (min-width: $screen-xxl) {
+        margin-top: 0;
+      }
+    }
+  }
+
   // &--info {
   //   .section__header {
   //     position: absolute;
@@ -517,4 +573,3 @@ pre {
 
 
 @include sprites($spritesheet-sprites);
-
