--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -34,6 +34,11 @@ $link-color:                  $color-main;
 $link-color--hover:           darken($color-main, 15%);
 
 $border-color:                $gray-lighten;
+$nav-tabs-link-hover-border-color: $tw-gray-900;
+$nav-tabs-link-active-border-color: $tw-gray-900;
+$nav-link-padding-x:          24px;
+$nav-link-padding-y:          24px;
+$nav-tabs-link-active-color:  $tw-black;
 
 
 
@@ -61,7 +66,7 @@ $font-family--monospace:     SFMono-Regular, Menlo, Monaco, Consolas, Liberation
 
 // Ширины
 
-$screen-xs:                   0;
+$screen-xs:                     0;
 // $screen-sm:                   360px;
 // $screen-md:                   768px;
 // $screen-lg:                   1024px;
